RELEASE 1.13 - fix spacing

--- a/style.css
+++ b/style.css
@@ -520,7 +520,6 @@ nav .links li a:hover i {
 .firstproject, .secondproject, .thirdproject, .fourthproject {
     width: 80%;
     margin-left: 10%;
-    align-items: center;
     height: 50vh;
     background-color: var(--background-200);
     padding: 1vw;
